start of exercise

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <header>
+        <h1>Toobolist</h1>
+    </header>
     
 </body>
 </html>
