--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it-IT">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,8 @@
     <body>
         <!-- titolo principale con logo -->
         <header>
-            <h1>Toobolist</h1>
+            <img class="logo" src="CSS/img/Logo.png" alt="logo Boolean">
+            <h1 class="logo-text">Toobolist</h1>
         </header>
         <!-- fine titolo principale con logo -->
 
