--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     
             <!-- navbar -->
             <nav>
-                <button type="button">ADD TASK</button>
-            </nav>
+                <button type="button" class="button">Add Task</button>
+                <input type="text" placeholder="Add Section">
+            </nav>     
             <!--fine navbar -->
 
             
