end of first section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             
             <!-- section NEW TASK -->
             <section>
+                <h2>&#9660;New Task</h2>
+                <p><span id="ceck">&#9989;</span>Quarterly Newsletter <span id="text-color-blu">Editorial</span></p>
 
             </section>
             <!--fine section NEW TASK -->
