end of third section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
 
             <!-- section UPCOMING -->
             <section>
-
+                <h2>&#9660;Upcoming</h2>
+                <p><span id="ceck">&#10060;</span>Schedule meeting with Alex</p>
+                <p><span id="ceck">&#9989;</span>Homepage refresh <span id="text-color-pink">Website</span></p>
+                <p><span id="ceck">&#9989;</span>Onboard new Sales team members <span id="text-color-lightgreen">Sales</span></p>
+                <p><span id="ceck">&#9989;</span>Review editorial calendar <span id="text-color-blu">Editorial</span></p>
             </section>
             <!--fine section UPCOMING -->
        
