main and article changes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h1 class="logo-text">Toobolist</h1>
         </header>
         <!-- fine titolo principale con logo -->
-
-        <main>
+    <main>
+        <article>
     
             <!-- navbar -->
             <nav>
@@ -54,8 +54,7 @@
             </section>
             <!--fine section UPCOMING -->
        
-        </main>
-
-
+        </article>
+    </main>    
     </body>
 </html>
