correzione font-family

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- titolo principale con logo -->
         <header>
             <img class="logo" src="CSS/img/Logo.png" alt="logo Boolean">
-            <h1 class="logo-text">Toboolist</h1>
+            <h1>Toboolist</h1>
         </header>
         <!-- fine titolo principale con logo -->
     <main>
