fine modifiche buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- inizio sezione buttons -->
         <section id="buttons">
     
-                <button>Add Task</button>
+                <button class="btn-primary">Add Task</button>
                 <button>Add Section</button> 
         </section>        
         <!-- fine sezione button -->
