--- a/index.html
+++ b/index.html
@@ -24,33 +24,55 @@
         </section>        
         <!-- fine sezione button -->
 
-            
-            <!-- lista non ordinata -->
-            <ul>
-                <li>
-                    New Task
-                </li>
-                <li>
-                    Quarterly newsletter
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    Today
-                </li>
-                <li>
-                    Recruiting blog post
-                </li>
-                <li>
-                    Mobile app launch
-                </li>
-                <li>
-                    Interview John H.
-                </li>
-                <li>
-                    Summit update to mobile storefronts 
-                </li>
-            </ul>
+        <!-- lista non ordinata -->
+        <div id="tasks-container">
+            <div class="task-group">
+                <h2>&#9207;New Task</h2>
+                <ul>
+                    <li>
+                        Quarterly newsletter
+                    </li>
+                </ul>
+            </div>
+
+            <div>   
+                <h2>&#9207;Today</h2>
+                <ul>
+                    <li>
+                        Recruiting blog post
+                    </li>
+                    <li>
+                        Mobile app launch
+                    </li>
+                    <li>
+                        Interview John H.
+                    </li>
+                    <li>
+                        Summit update to mobile storefronts 
+                    </li>
+                </ul>
+            </div>
+
+            <div>   
+                <h2>&#9207;Upcoming</h2>
+                <ul>
+                    <li>
+                        Schedule meeting with Alex
+                    </li>
+                    <li>
+                        Homepage refresh
+                    </li>
+                    <li>
+                        Onboard new Sales team members
+                    </li>
+                    <li>
+                        Review editorial calendar
+                    </li>
+                </ul>
+            </div>
+        </div> 
+        <!-- fine lista non ordinata -->
+
     </main>    
     </body>
 </html>
