--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>&#9207;New Task</h2>
                 <ul>
                     <li>
-                        Quarterly newsletter
+                        <span class="icon">&check;</span>Quarterly newsletter
                     </li>
                 </ul>
             </div>
@@ -39,16 +39,16 @@
                 <h2>&#9207;Today</h2>
                 <ul>
                     <li>
-                        Recruiting blog post
+                        <span class="icon">&check;</span>Recruiting blog post
                     </li>
                     <li>
-                        Mobile app launch
+                        <span class="icon">&check;</span>Mobile app launch
                     </li>
                     <li>
-                        Interview John H.
+                        <span class="icon">&cross;</span>Interview John H.
                     </li>
                     <li>
-                        Summit update to mobile storefronts 
+                        <span class="icon">&check;</span>Summit update to mobile storefronts 
                     </li>
                 </ul>
             </div>
@@ -57,16 +57,16 @@
                 <h2>&#9207;Upcoming</h2>
                 <ul>
                     <li>
-                        Schedule meeting with Alex
+                        <span class="icon">&cross;</span>Schedule meeting with Alex
                     </li>
                     <li>
-                        Homepage refresh
+                        <span class="icon">&check;</span>Homepage refresh
+                    </li>                                                                   
+                    <li>
+                        <span class="icon">&check;</span>Onboard new Sales team members
                     </li>
                     <li>
-                        Onboard new Sales team members
-                    </li>
-                    <li>
-                        Review editorial calendar
+                        <span class="icon">&check;</span>Review editorial calendar
                     </li>
                 </ul>
             </div>
