fine correzione esercizio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>&#9207;New Task</h2>
                 <ul>
                     <li>
-                        <span class="icon check">&check;</span> Quarterly newsletter <span class="category">Editorial</span>
+                        <span class="icon check">&check;</span> Quarterly newsletter <span class="category  cat-editorial">Editorial</span>
                     </li>
                 </ul>
             </div>
@@ -39,16 +39,16 @@
                 <h2>&#9207;Today</h2>
                 <ul>
                     <li>
-                        <span class="icon check">&check;</span> Recruiting blog post <span class="category">Editorial</span>
+                        <span class="icon check">&check;</span> Recruiting blog post <span class="category  cat-editorial">Editorial</span>
                     </li>
                     <li>
-                        <span class="icon check">&check;</span> Mobile app launch <span class="category">Editorial</span>
+                        <span class="icon check">&check;</span> Mobile app launch <span class="category cat-goals">Q1 goals</span>
                     </li>
                     <li>
-                        <span class="icon cross">&cross;</span> Interview John H. <span class="category">Editorial</span>
+                        <span class="icon cross">&cross;</span> Interview John H. <span class="category cat-recruiting" >Recruiting</span>
                     </li>
                     <li>
-                        <span class="icon check">&check;</span> Summit update to mobile storefronts <span class="category">Editorial</span> 
+                        <span class="icon check">&check;</span> Summit update to mobile storefronts <span class="category cat-mobile">Mobile</span> 
                     </li>
                 </ul>
             </div>
@@ -57,16 +57,16 @@
                 <h2>&#9207;Upcoming</h2>
                 <ul>
                     <li>
-                        <span class="icon cross">&cross;</span> Schedule meeting with Alex <span class="category cat-editorial">Editorial</span>
+                        <span class="icon cross">&cross;</span> Schedule meeting with Alex
                     </li>
                     <li>
-                        <span class="icon check">&check;</span> Homepage refresh <span class="category">Editorial</span>
+                        <span class="icon check">&check;</span> Homepage refresh <span class="category cat-website">Website</span>
                     </li>                                                                   
                     <li>
-                        <span class="icon check">&check;</span> Onboard new Sales team members <span class="category">Editorial</span>
+                        <span class="icon check">&check;</span> Onboard new Sales team members <span class="category cat-sales">Sales</span>
                     </li>
                     <li>
-                        <span class="icon check">&check;</span> Review editorial calendar <span class="category">Editorial</span>
+                        <span class="icon check">&check;</span> Review editorial calendar <span class="category cat-editorial">Editorial</span>
                     </li>
                 </ul>
             </div>
